# multi_robot-simulation

./: README.md
Interface/algorithm_interface/algorithm_msgs/: CMakeLists.txt  package.xml
Interface/algorithm_interface/allocation_within_area/: CMakeLists.txt  package.xml
Interface/algorithm_interface/environment_radiation/: CMakeLists.txt  package.xml
Interface/algorithm_interface/robot_server/: CMakeLists.txt  package.xml
Interface/algorithm_interface/signal_display/: CMakeLists.txt  package.xml
Interface/algorithm_interface/split_area/: CMakeLists.txt  package.xml
Interface/algorithm_interface/task_server/: CMakeLists.txt  package.xml
Interface/robot_navigation/: CMakeLists.txt  package.xml
Interface/robot_navigation/launch(one)/: amcl(one).launch  (+1 more)
Interface/robot_slam/: CMakeLists.txt  package.xml
Interface/test_crawler/: CMakeLists.txt  package.xml
Interface/test_environment/: CMakeLists.txt  package.xml
Interface/test_wheel/: CMakeLists.txt  package.xml
bash/: module_3.sh  robot_server.sh  split_area.sh  task_exe.sh  task_server.sh
multi_turtlebots_sim/launch/: auto_creat_one_robot.launch  main.launch  robots.launch
robot_sim/: CMakeLists.txt  RobotSim.pro  RobotSim.pro.user.8cee228  package.xml  qt.md
robot_sim/include/: mainwindow.h  position.h  qnode.h  task_list.h  ui_mainwindow.h
robot_sim/resources/: res.qrc
robot_sim/resources/Image/: 双筒核电站.jfif  国家自然科学基金委员会.jfif  校徽.jfif  核电厂.jfif
robot_sim/src/: main.cpp  mainwindow.cpp  position.cpp  qnode.cpp  task_list.cpp
robot_sim/ui/: mainwindow.ui  position.ui  task_list.ui
(+96 files in other folders)
