<?xml version="1.0"?>
<package>
  <name>robot_sim</name>
  <version>0.1.0</version>
  <description>

     robot_sim

  </description>
  <maintainer email="chengyangkj@gmail.com">chengyangkj</maintainer>
  <maintainer email="danpe@lijianxun.com">danpe</maintainer>
  <author>shan</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <!--build_depend>qt_build</build_depend-->
  <build_depend>roscpp</build_depend>
  <!--build_depend>libqt4-dev</build_depend-->
  <!--run_depend>qt_build</run_depend-->
  <!--run_depend>libqt4-dev</run_depend-->
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>algorithm_msgs</build_depend>
  <build_depend>allocation_within_area</build_depend>
  <build_depend>split_area</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>split_area</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>algorithm_msgs</run_depend>
  <run_depend>allocation_within_area</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>


</package>

